[project]
name = "tree_height"
version = "1.0"
description = "A package for do some"
requires-python = ">=3.10"
dependencies = [
    "torch == 2.0",
    "torchvision ~= 0.15",
    "timm~=0.9",
    "tensorflow==2.12",
    "tifffile",
    "rasterio",
    "einops",
    "wandb",
    "pytorch-lightning == 2.0",
    "jsonargparse[signatures] ~= 4.17",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trainer = "tree_height.cli:main"